; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_datalink.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_datalink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Adapter = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rawsock_datalink(%struct.Adapter* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.Adapter*, align 8
  store %struct.Adapter* %0, %struct.Adapter** %3, align 8
  %4 = load %struct.Adapter*, %struct.Adapter** %3, align 8
  %5 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load %struct.Adapter*, %struct.Adapter** %3, align 8
  %11 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %9, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
